name:                salt
version:             0.0
synopsis:            Cryptographic networking for Haskell
description:
  NaCl (pronounced \"salt\") is a safe, high-speed, easy to use
  cryptography library - the project was initiated
  by CACE (Computer Aided Cryptography Engineering,) and is currently
  lead by Dan J. Bernstein and Tanja Lange. It's designed to be
  considerably faster and easier to use (e.g. simple APIs, good
  selection of default primitives) than alternative crypto libraries
  like OpenSSL.
  .
  This package provides a high level interface to NaCl and all its
  basic APIs.
  .
  This package will take some time to build the first time you
  install it. It will build nacl (which can't be done directly
  by cabal) in the @./configure@ step, and put it in a known
  location under your @$HOME@ so cabal can link to it correctly
  later. You won't need to do this again unless the underlying
  version of NaCl changes.
  .
  The current version of NaCl used in this package is @20110221@.
  .
  See more details including documentation, test coverage reports,
  and benchmarks, here: <http://thoughtpolice.github.com/salt>
homepage:            http://thoughtpolice.github.com/salt
bug-reports:         http://github.com/thoughtpolice/salt/issues
license:             MIT
license-file:        LICENSE.txt
copyright:           Copyright (c) Austin Seipp 2011-2012
author:              Austin Seipp <mad.one@gmail.com>
maintainer:          Austin Seipp <mad.one@gmail.com>
category:            Cryptography, Networking
build-type:          Configure
cabal-version:       >=1.10
tested-with:         GHC==7.0.4,
                     GHC==7.2.1, GHC==7.2.2,
                     GHC==7.4.1,
                     GHC==7.5.*

extra-source-files:
  configure
  AUTHORS.txt
  bench/Bench.hs bench/makefile
  src/cbits/*.c
  examples/*.hs
  README.md
  tests/*.hs
  TODO
  -- good god
  src/cbits/nacl-20110221/commandline/nacl-sha256.c
  src/cbits/nacl-20110221/commandline/nacl-sha512.c
  src/cbits/nacl-20110221/cpucycles/alpha.c
  src/cbits/nacl-20110221/cpucycles/alpha.h
  src/cbits/nacl-20110221/cpucycles/amd64cpuinfo.c
  src/cbits/nacl-20110221/cpucycles/amd64cpuinfo.h
  src/cbits/nacl-20110221/cpucycles/amd64cpuspeed.c
  src/cbits/nacl-20110221/cpucycles/amd64cpuspeed.h
  src/cbits/nacl-20110221/cpucycles/amd64tscfreq.c
  src/cbits/nacl-20110221/cpucycles/amd64tscfreq.h
  src/cbits/nacl-20110221/cpucycles/celllinux.c
  src/cbits/nacl-20110221/cpucycles/celllinux.h
  src/cbits/nacl-20110221/cpucycles/cortex.c
  src/cbits/nacl-20110221/cpucycles/cortex.h
  src/cbits/nacl-20110221/cpucycles/dev4ns.c
  src/cbits/nacl-20110221/cpucycles/dev4ns.h
  src/cbits/nacl-20110221/cpucycles/do
  src/cbits/nacl-20110221/cpucycles/gettimeofday.c
  src/cbits/nacl-20110221/cpucycles/gettimeofday.h
  src/cbits/nacl-20110221/cpucycles/hppapstat.c
  src/cbits/nacl-20110221/cpucycles/hppapstat.h
  src/cbits/nacl-20110221/cpucycles/ia64cpuinfo.c
  src/cbits/nacl-20110221/cpucycles/ia64cpuinfo.h
  src/cbits/nacl-20110221/cpucycles/mips.c
  src/cbits/nacl-20110221/cpucycles/mips.h
  src/cbits/nacl-20110221/cpucycles/monotonic.c
  src/cbits/nacl-20110221/cpucycles/monotonic.h
  src/cbits/nacl-20110221/cpucycles/monotoniccpuinfo.c
  src/cbits/nacl-20110221/cpucycles/monotoniccpuinfo.h
  src/cbits/nacl-20110221/cpucycles/osfreq.c
  src/cbits/nacl-20110221/cpucycles/powerpccpuinfo.c
  src/cbits/nacl-20110221/cpucycles/powerpccpuinfo.h
  src/cbits/nacl-20110221/cpucycles/powerpcmacos.c
  src/cbits/nacl-20110221/cpucycles/powerpcmacos.h
  src/cbits/nacl-20110221/cpucycles/sgi.c
  src/cbits/nacl-20110221/cpucycles/sgi.h
  src/cbits/nacl-20110221/cpucycles/sparc32cpuinfo.c
  src/cbits/nacl-20110221/cpucycles/sparc32cpuinfo.h
  src/cbits/nacl-20110221/cpucycles/sparccpuinfo.c
  src/cbits/nacl-20110221/cpucycles/sparccpuinfo.h
  src/cbits/nacl-20110221/cpucycles/test.c
  src/cbits/nacl-20110221/cpucycles/x86cpuinfo.c
  src/cbits/nacl-20110221/cpucycles/x86cpuinfo.h
  src/cbits/nacl-20110221/cpucycles/x86cpuspeed.c
  src/cbits/nacl-20110221/cpucycles/x86cpuspeed.h
  src/cbits/nacl-20110221/cpucycles/x86estimate.c
  src/cbits/nacl-20110221/cpucycles/x86estimate.h
  src/cbits/nacl-20110221/cpucycles/x86tscfreq.c
  src/cbits/nacl-20110221/cpucycles/x86tscfreq.h
  src/cbits/nacl-20110221/cpuid/cbytes.c
  src/cbits/nacl-20110221/cpuid/cpuid.c
  src/cbits/nacl-20110221/cpuid/do
  src/cbits/nacl-20110221/cpuid/unknown.c
  src/cbits/nacl-20110221/cpuid/x86.c
  src/cbits/nacl-20110221/crypto_auth/hmacsha256/checksum
  src/cbits/nacl-20110221/crypto_auth/hmacsha256/ref/api.h
  src/cbits/nacl-20110221/crypto_auth/hmacsha256/ref/hmac.c
  src/cbits/nacl-20110221/crypto_auth/hmacsha256/ref/verify.c
  src/cbits/nacl-20110221/crypto_auth/hmacsha256/used
  src/cbits/nacl-20110221/crypto_auth/hmacsha512256/checksum
  src/cbits/nacl-20110221/crypto_auth/hmacsha512256/ref/api.h
  src/cbits/nacl-20110221/crypto_auth/hmacsha512256/ref/hmac.c
  src/cbits/nacl-20110221/crypto_auth/hmacsha512256/ref/verify.c
  src/cbits/nacl-20110221/crypto_auth/hmacsha512256/selected
  src/cbits/nacl-20110221/crypto_auth/hmacsha512256/used
  src/cbits/nacl-20110221/crypto_auth/measure.c
  src/cbits/nacl-20110221/crypto_auth/try.c
  src/cbits/nacl-20110221/crypto_auth/wrapper-auth.cpp
  src/cbits/nacl-20110221/crypto_auth/wrapper-verify.cpp
  src/cbits/nacl-20110221/crypto_box/curve25519xsalsa20poly1305/checksum
  src/cbits/nacl-20110221/crypto_box/curve25519xsalsa20poly1305/ref/after.c
  src/cbits/nacl-20110221/crypto_box/curve25519xsalsa20poly1305/ref/api.h
  src/cbits/nacl-20110221/crypto_box/curve25519xsalsa20poly1305/ref/before.c
  src/cbits/nacl-20110221/crypto_box/curve25519xsalsa20poly1305/ref/box.c
  src/cbits/nacl-20110221/crypto_box/curve25519xsalsa20poly1305/ref/keypair.c
  src/cbits/nacl-20110221/crypto_box/curve25519xsalsa20poly1305/selected
  src/cbits/nacl-20110221/crypto_box/curve25519xsalsa20poly1305/used
  src/cbits/nacl-20110221/crypto_box/measure.c
  src/cbits/nacl-20110221/crypto_box/try.c
  src/cbits/nacl-20110221/crypto_box/wrapper-box.cpp
  src/cbits/nacl-20110221/crypto_box/wrapper-keypair.cpp
  src/cbits/nacl-20110221/crypto_box/wrapper-open.cpp
  src/cbits/nacl-20110221/crypto_core/hsalsa20/checksum
  src/cbits/nacl-20110221/crypto_core/hsalsa20/ref/api.h
  src/cbits/nacl-20110221/crypto_core/hsalsa20/ref/core.c
  src/cbits/nacl-20110221/crypto_core/hsalsa20/ref/implementors
  src/cbits/nacl-20110221/crypto_core/hsalsa20/ref2/api.h
  src/cbits/nacl-20110221/crypto_core/hsalsa20/ref2/core.c
  src/cbits/nacl-20110221/crypto_core/hsalsa20/ref2/implementors
  src/cbits/nacl-20110221/crypto_core/hsalsa20/used
  src/cbits/nacl-20110221/crypto_core/measure.c
  src/cbits/nacl-20110221/crypto_core/salsa20/checksum
  src/cbits/nacl-20110221/crypto_core/salsa20/ref/api.h
  src/cbits/nacl-20110221/crypto_core/salsa20/ref/core.c
  src/cbits/nacl-20110221/crypto_core/salsa20/ref/implementors
  src/cbits/nacl-20110221/crypto_core/salsa20/used
  src/cbits/nacl-20110221/crypto_core/salsa2012/checksum
  src/cbits/nacl-20110221/crypto_core/salsa2012/ref/api.h
  src/cbits/nacl-20110221/crypto_core/salsa2012/ref/core.c
  src/cbits/nacl-20110221/crypto_core/salsa2012/ref/implementors
  src/cbits/nacl-20110221/crypto_core/salsa2012/used
  src/cbits/nacl-20110221/crypto_core/salsa208/checksum
  src/cbits/nacl-20110221/crypto_core/salsa208/ref/api.h
  src/cbits/nacl-20110221/crypto_core/salsa208/ref/core.c
  src/cbits/nacl-20110221/crypto_core/salsa208/ref/implementors
  src/cbits/nacl-20110221/crypto_core/salsa208/used
  src/cbits/nacl-20110221/crypto_core/try.c
  src/cbits/nacl-20110221/crypto_core/wrapper-empty.cpp
  src/cbits/nacl-20110221/crypto_hash/measure.c
  src/cbits/nacl-20110221/crypto_hash/sha256/checksum
  src/cbits/nacl-20110221/crypto_hash/sha256/ref/api.h
  src/cbits/nacl-20110221/crypto_hash/sha256/ref/hash.c
  src/cbits/nacl-20110221/crypto_hash/sha256/ref/implementors
  src/cbits/nacl-20110221/crypto_hash/sha256/used
  src/cbits/nacl-20110221/crypto_hash/sha512/checksum
  src/cbits/nacl-20110221/crypto_hash/sha512/ref/api.h
  src/cbits/nacl-20110221/crypto_hash/sha512/ref/hash.c
  src/cbits/nacl-20110221/crypto_hash/sha512/ref/implementors
  src/cbits/nacl-20110221/crypto_hash/sha512/selected
  src/cbits/nacl-20110221/crypto_hash/sha512/used
  src/cbits/nacl-20110221/crypto_hash/try.c
  src/cbits/nacl-20110221/crypto_hash/wrapper-hash.cpp
  src/cbits/nacl-20110221/crypto_hashblocks/measure.c
  src/cbits/nacl-20110221/crypto_hashblocks/sha256/checksum
  src/cbits/nacl-20110221/crypto_hashblocks/sha256/inplace/api.h
  src/cbits/nacl-20110221/crypto_hashblocks/sha256/inplace/blocks.c
  src/cbits/nacl-20110221/crypto_hashblocks/sha256/inplace/implementors
  src/cbits/nacl-20110221/crypto_hashblocks/sha256/ref/api.h
  src/cbits/nacl-20110221/crypto_hashblocks/sha256/ref/blocks.c
  src/cbits/nacl-20110221/crypto_hashblocks/sha256/ref/implementors
  src/cbits/nacl-20110221/crypto_hashblocks/sha256/used
  src/cbits/nacl-20110221/crypto_hashblocks/sha512/checksum
  src/cbits/nacl-20110221/crypto_hashblocks/sha512/inplace/api.h
  src/cbits/nacl-20110221/crypto_hashblocks/sha512/inplace/blocks.c
  src/cbits/nacl-20110221/crypto_hashblocks/sha512/inplace/implementors
  src/cbits/nacl-20110221/crypto_hashblocks/sha512/ref/api.h
  src/cbits/nacl-20110221/crypto_hashblocks/sha512/ref/blocks.c
  src/cbits/nacl-20110221/crypto_hashblocks/sha512/ref/implementors
  src/cbits/nacl-20110221/crypto_hashblocks/sha512/selected
  src/cbits/nacl-20110221/crypto_hashblocks/sha512/used
  src/cbits/nacl-20110221/crypto_hashblocks/try.c
  src/cbits/nacl-20110221/crypto_hashblocks/wrapper-empty.cpp
  src/cbits/nacl-20110221/crypto_onetimeauth/measure.c
  src/cbits/nacl-20110221/crypto_onetimeauth/poly1305/53/api.h
  src/cbits/nacl-20110221/crypto_onetimeauth/poly1305/53/auth.c
  src/cbits/nacl-20110221/crypto_onetimeauth/poly1305/53/verify.c
  src/cbits/nacl-20110221/crypto_onetimeauth/poly1305/amd64/api.h
  src/cbits/nacl-20110221/crypto_onetimeauth/poly1305/amd64/auth.s
  src/cbits/nacl-20110221/crypto_onetimeauth/poly1305/amd64/constants.s
  src/cbits/nacl-20110221/crypto_onetimeauth/poly1305/amd64/verify.c
  src/cbits/nacl-20110221/crypto_onetimeauth/poly1305/checksum
  src/cbits/nacl-20110221/crypto_onetimeauth/poly1305/ref/api.h
  src/cbits/nacl-20110221/crypto_onetimeauth/poly1305/ref/auth.c
  src/cbits/nacl-20110221/crypto_onetimeauth/poly1305/ref/verify.c
  src/cbits/nacl-20110221/crypto_onetimeauth/poly1305/selected
  src/cbits/nacl-20110221/crypto_onetimeauth/poly1305/used
  src/cbits/nacl-20110221/crypto_onetimeauth/poly1305/x86/api.h
  src/cbits/nacl-20110221/crypto_onetimeauth/poly1305/x86/auth.s
  src/cbits/nacl-20110221/crypto_onetimeauth/poly1305/x86/constants.s
  src/cbits/nacl-20110221/crypto_onetimeauth/poly1305/x86/verify.c
  src/cbits/nacl-20110221/crypto_onetimeauth/try.c
  src/cbits/nacl-20110221/crypto_onetimeauth/wrapper-auth.cpp
  src/cbits/nacl-20110221/crypto_onetimeauth/wrapper-verify.cpp
  src/cbits/nacl-20110221/crypto_scalarmult/curve25519/athlon/api.h
  src/cbits/nacl-20110221/crypto_scalarmult/curve25519/athlon/base.c
  src/cbits/nacl-20110221/crypto_scalarmult/curve25519/athlon/const.s
  src/cbits/nacl-20110221/crypto_scalarmult/curve25519/athlon/fromdouble.s
  src/cbits/nacl-20110221/crypto_scalarmult/curve25519/athlon/implementors
  src/cbits/nacl-20110221/crypto_scalarmult/curve25519/athlon/init.s
  src/cbits/nacl-20110221/crypto_scalarmult/curve25519/athlon/mainloop.s
  src/cbits/nacl-20110221/crypto_scalarmult/curve25519/athlon/mult.s
  src/cbits/nacl-20110221/crypto_scalarmult/curve25519/athlon/smult.c
  src/cbits/nacl-20110221/crypto_scalarmult/curve25519/athlon/square.s
  src/cbits/nacl-20110221/crypto_scalarmult/curve25519/athlon/todouble.s
  src/cbits/nacl-20110221/crypto_scalarmult/curve25519/checksum
  src/cbits/nacl-20110221/crypto_scalarmult/curve25519/donna_c64/api.h
  src/cbits/nacl-20110221/crypto_scalarmult/curve25519/donna_c64/base.c
  src/cbits/nacl-20110221/crypto_scalarmult/curve25519/donna_c64/implementors
  src/cbits/nacl-20110221/crypto_scalarmult/curve25519/donna_c64/smult.c
  src/cbits/nacl-20110221/crypto_scalarmult/curve25519/ref/api.h
  src/cbits/nacl-20110221/crypto_scalarmult/curve25519/ref/base.c
  src/cbits/nacl-20110221/crypto_scalarmult/curve25519/ref/implementors
  src/cbits/nacl-20110221/crypto_scalarmult/curve25519/ref/smult.c
  src/cbits/nacl-20110221/crypto_scalarmult/curve25519/used
  src/cbits/nacl-20110221/crypto_scalarmult/measure.c
  src/cbits/nacl-20110221/crypto_scalarmult/try.c
  src/cbits/nacl-20110221/crypto_scalarmult/wrapper-base.cpp
  src/cbits/nacl-20110221/crypto_scalarmult/wrapper-mult.cpp
  src/cbits/nacl-20110221/crypto_secretbox/measure.c
  src/cbits/nacl-20110221/crypto_secretbox/try.c
  src/cbits/nacl-20110221/crypto_secretbox/wrapper-box.cpp
  src/cbits/nacl-20110221/crypto_secretbox/wrapper-open.cpp
  src/cbits/nacl-20110221/crypto_secretbox/xsalsa20poly1305/checksum
  src/cbits/nacl-20110221/crypto_secretbox/xsalsa20poly1305/ref/api.h
  src/cbits/nacl-20110221/crypto_secretbox/xsalsa20poly1305/ref/box.c
  src/cbits/nacl-20110221/crypto_secretbox/xsalsa20poly1305/selected
  src/cbits/nacl-20110221/crypto_secretbox/xsalsa20poly1305/used
  src/cbits/nacl-20110221/crypto_sign/edwards25519sha512batch/ref/api.h
  src/cbits/nacl-20110221/crypto_sign/edwards25519sha512batch/ref/fe25519.c
  src/cbits/nacl-20110221/crypto_sign/edwards25519sha512batch/ref/fe25519.h
  src/cbits/nacl-20110221/crypto_sign/edwards25519sha512batch/ref/ge25519.c
  src/cbits/nacl-20110221/crypto_sign/edwards25519sha512batch/ref/ge25519.h
  src/cbits/nacl-20110221/crypto_sign/edwards25519sha512batch/ref/sc25519.c
  src/cbits/nacl-20110221/crypto_sign/edwards25519sha512batch/ref/sc25519.h
  src/cbits/nacl-20110221/crypto_sign/edwards25519sha512batch/ref/sign.c
  src/cbits/nacl-20110221/crypto_sign/edwards25519sha512batch/used
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref10/ge_sub.q
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref10/ge_msub.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref10/fe_invert.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref10/q2h.sh
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref10/fe_sq.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref10/ge_tobytes.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref10/ge_precomp_0.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref10/pow225521.h
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref10/keypair.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref10/pow225521.q
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref10/sqrtm1.h
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref10/ge_add.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref10/ge_scalarmult_base.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref10/fe_cmov.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref10/fe.h
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref10/ge_madd.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref10/ge_madd.h
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref10/pow22523.h
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref10/d2.py
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref10/fe_sub.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref10/sign.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref10/fe_pow22523.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref10/fe_frombytes.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref10/d.py
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref10/fe_mul.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref10/ge_msub.h
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref10/ge_p2_dbl.q
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref10/ge_add.h
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref10/base2.h
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref10/ge_p2_dbl.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref10/base.h
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref10/ge_p2_dbl.h
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref10/sqrtm1.py
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref10/sc_muladd.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref10/fe_1.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref10/ge_p1p1_to_p2.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref10/d.h
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref10/Makefile
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref10/fe_tobytes.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref10/pow22523.q
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref10/base2.py
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref10/fe_0.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref10/api.h
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref10/ge_p1p1_to_p3.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref10/ge_p3_dbl.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref10/d2.h
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref10/ge_madd.q
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref10/ge_p3_to_p2.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref10/sc.h
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref10/base.py
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref10/fe_neg.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref10/fe_add.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref10/ge_p3_tobytes.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref10/ge_msub.q
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref10/fe_isnonzero.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref10/ge_p3_to_cached.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref10/ge_sub.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref10/fe_copy.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref10/fe_isnegative.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref10/fe_sq2.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref10/open.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref10/ge_p2_0.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref10/ge_add.q
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref10/ge_double_scalarmult.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref10/ge_p3_0.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref10/ge_sub.h
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref10/ge_frombytes.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref10/sc_reduce.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref10/ge.h
  src/cbits/nacl-20110221/crypto_sign/ed25519/designers
  src/cbits/nacl-20110221/crypto_sign/ed25519/selected
  src/cbits/nacl-20110221/crypto_sign/ed25519/description
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref/fe25519.h
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref/sc25519.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref/implementors
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref/ed25519.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref/fe25519.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref/sc25519.h
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref/ge25519_base.data
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref/ge25519.h
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref/api.h
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref/ge25519.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/amd64-64-24k/fe25519_sub.s
  src/cbits/nacl-20110221/crypto_sign/ed25519/amd64-64-24k/fe25519_iszero.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/amd64-64-24k/fe25519.h
  src/cbits/nacl-20110221/crypto_sign/ed25519/amd64-64-24k/sc25519_from_shortsc.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/amd64-64-24k/ge25519_unpackneg.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/amd64-64-24k/architectures
  src/cbits/nacl-20110221/crypto_sign/ed25519/amd64-64-24k/ge25519_dbl_p1p1.s
  src/cbits/nacl-20110221/crypto_sign/ed25519/amd64-64-24k/index_heap.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/amd64-64-24k/sc25519_mul.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/amd64-64-24k/ull4_mul.s
  src/cbits/nacl-20110221/crypto_sign/ed25519/amd64-64-24k/ge25519_base.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/amd64-64-24k/sc25519_to32bytes.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/amd64-64-24k/ge25519_nielsadd_p1p1.s
  src/cbits/nacl-20110221/crypto_sign/ed25519/amd64-64-24k/fe25519_square.s
  src/cbits/nacl-20110221/crypto_sign/ed25519/amd64-64-24k/ge25519_pnielsadd_p1p1.s
  src/cbits/nacl-20110221/crypto_sign/ed25519/amd64-64-24k/keypair.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/amd64-64-24k/ge25519_add_p1p1.s
  src/cbits/nacl-20110221/crypto_sign/ed25519/amd64-64-24k/ge25519_base_slide_multiples.data
  src/cbits/nacl-20110221/crypto_sign/ed25519/amd64-64-24k/index_heap.h
  src/cbits/nacl-20110221/crypto_sign/ed25519/amd64-64-24k/fe25519_invert.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/amd64-64-24k/implementors
  src/cbits/nacl-20110221/crypto_sign/ed25519/amd64-64-24k/fe25519_pack.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/amd64-64-24k/sign.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/amd64-64-24k/sc25519_window4.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/amd64-64-24k/heap_rootreplaced_2limbs.s
  src/cbits/nacl-20110221/crypto_sign/ed25519/amd64-64-24k/sc25519_sub_nored.s
  src/cbits/nacl-20110221/crypto_sign/ed25519/amd64-64-24k/ge25519_isneutral.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/amd64-64-24k/fe25519_getparity.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/amd64-64-24k/fe25519_pow2523.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/amd64-64-24k/ge25519_double.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/amd64-64-24k/consts.s
  src/cbits/nacl-20110221/crypto_sign/ed25519/amd64-64-24k/sc25519_from32bytes.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/amd64-64-24k/ge25519_base_niels_smalltables.data
  src/cbits/nacl-20110221/crypto_sign/ed25519/amd64-64-24k/fe25519_mul.s
  src/cbits/nacl-20110221/crypto_sign/ed25519/amd64-64-24k/sc25519.h
  src/cbits/nacl-20110221/crypto_sign/ed25519/amd64-64-24k/ge25519_add.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/amd64-64-24k/sc25519_add.s
  src/cbits/nacl-20110221/crypto_sign/ed25519/amd64-64-24k/ge25519.h
  src/cbits/nacl-20110221/crypto_sign/ed25519/amd64-64-24k/sc25519_iszero.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/amd64-64-24k/choose_t.s
  src/cbits/nacl-20110221/crypto_sign/ed25519/amd64-64-24k/api.h
  src/cbits/nacl-20110221/crypto_sign/ed25519/amd64-64-24k/heap_rootreplaced.s
  src/cbits/nacl-20110221/crypto_sign/ed25519/amd64-64-24k/ge25519_double_scalarmult.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/amd64-64-24k/hram.h
  src/cbits/nacl-20110221/crypto_sign/ed25519/amd64-64-24k/heap_rootreplaced_3limbs.s
  src/cbits/nacl-20110221/crypto_sign/ed25519/amd64-64-24k/sc25519_mul_shortsc.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/amd64-64-24k/ge25519_p1p1_to_p3.s
  src/cbits/nacl-20110221/crypto_sign/ed25519/amd64-64-24k/fe25519_neg.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/amd64-64-24k/batch.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/amd64-64-24k/ge25519_p1p1_to_p2.s
  src/cbits/nacl-20110221/crypto_sign/ed25519/amd64-64-24k/ge25519_pack.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/amd64-64-24k/hram.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/amd64-64-24k/ge25519_scalarmult_base.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/amd64-64-24k/sc25519_slide.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/amd64-64-24k/fe25519_setint.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/amd64-64-24k/fe25519_unpack.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/amd64-64-24k/open.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/amd64-64-24k/sc25519_barrett.s
  src/cbits/nacl-20110221/crypto_sign/ed25519/amd64-64-24k/ge25519_multi_scalarmult.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/amd64-64-24k/heap_rootreplaced_1limb.s
  src/cbits/nacl-20110221/crypto_sign/ed25519/amd64-64-24k/sc25519_from64bytes.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/amd64-64-24k/fe25519_freeze.s
  src/cbits/nacl-20110221/crypto_sign/ed25519/amd64-64-24k/ge25519_nielsadd2.s
  src/cbits/nacl-20110221/crypto_sign/ed25519/amd64-64-24k/sc25519_lt.s
  src/cbits/nacl-20110221/crypto_sign/ed25519/amd64-64-24k/fe25519_add.s
  src/cbits/nacl-20110221/crypto_sign/ed25519/amd64-64-24k/fe25519_iseq.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/amd64-51-30k/fe25519_iszero.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/amd64-51-30k/fe25519.h
  src/cbits/nacl-20110221/crypto_sign/ed25519/amd64-51-30k/sc25519_from_shortsc.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/amd64-51-30k/ge25519_unpackneg.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/amd64-51-30k/architectures
  src/cbits/nacl-20110221/crypto_sign/ed25519/amd64-51-30k/ge25519_dbl_p1p1.s
  src/cbits/nacl-20110221/crypto_sign/ed25519/amd64-51-30k/index_heap.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/amd64-51-30k/sc25519_mul.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/amd64-51-30k/ull4_mul.s
  src/cbits/nacl-20110221/crypto_sign/ed25519/amd64-51-30k/ge25519_base.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/amd64-51-30k/sc25519_to32bytes.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/amd64-51-30k/ge25519_nielsadd_p1p1.s
  src/cbits/nacl-20110221/crypto_sign/ed25519/amd64-51-30k/fe25519_square.s
  src/cbits/nacl-20110221/crypto_sign/ed25519/amd64-51-30k/ge25519_pnielsadd_p1p1.s
  src/cbits/nacl-20110221/crypto_sign/ed25519/amd64-51-30k/keypair.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/amd64-51-30k/ge25519_add_p1p1.s
  src/cbits/nacl-20110221/crypto_sign/ed25519/amd64-51-30k/ge25519_base_slide_multiples.data
  src/cbits/nacl-20110221/crypto_sign/ed25519/amd64-51-30k/index_heap.h
  src/cbits/nacl-20110221/crypto_sign/ed25519/amd64-51-30k/fe25519_invert.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/amd64-51-30k/implementors
  src/cbits/nacl-20110221/crypto_sign/ed25519/amd64-51-30k/fe25519_pack.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/amd64-51-30k/sign.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/amd64-51-30k/fe25519_sub.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/amd64-51-30k/sc25519_window4.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/amd64-51-30k/heap_rootreplaced_2limbs.s
  src/cbits/nacl-20110221/crypto_sign/ed25519/amd64-51-30k/sc25519_sub_nored.s
  src/cbits/nacl-20110221/crypto_sign/ed25519/amd64-51-30k/ge25519_isneutral.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/amd64-51-30k/fe25519_getparity.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/amd64-51-30k/fe25519_pow2523.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/amd64-51-30k/ge25519_double.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/amd64-51-30k/consts.s
  src/cbits/nacl-20110221/crypto_sign/ed25519/amd64-51-30k/sc25519_from32bytes.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/amd64-51-30k/ge25519_base_niels_smalltables.data
  src/cbits/nacl-20110221/crypto_sign/ed25519/amd64-51-30k/fe25519_mul.s
  src/cbits/nacl-20110221/crypto_sign/ed25519/amd64-51-30k/sc25519.h
  src/cbits/nacl-20110221/crypto_sign/ed25519/amd64-51-30k/ge25519_add.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/amd64-51-30k/sc25519_add.s
  src/cbits/nacl-20110221/crypto_sign/ed25519/amd64-51-30k/ge25519.h
  src/cbits/nacl-20110221/crypto_sign/ed25519/amd64-51-30k/sc25519_iszero.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/amd64-51-30k/choose_t.s
  src/cbits/nacl-20110221/crypto_sign/ed25519/amd64-51-30k/api.h
  src/cbits/nacl-20110221/crypto_sign/ed25519/amd64-51-30k/heap_rootreplaced.s
  src/cbits/nacl-20110221/crypto_sign/ed25519/amd64-51-30k/fe25519_nsquare.s
  src/cbits/nacl-20110221/crypto_sign/ed25519/amd64-51-30k/ge25519_double_scalarmult.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/amd64-51-30k/hram.h
  src/cbits/nacl-20110221/crypto_sign/ed25519/amd64-51-30k/heap_rootreplaced_3limbs.s
  src/cbits/nacl-20110221/crypto_sign/ed25519/amd64-51-30k/fe25519_add.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/amd64-51-30k/sc25519_mul_shortsc.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/amd64-51-30k/ge25519_p1p1_to_p3.s
  src/cbits/nacl-20110221/crypto_sign/ed25519/amd64-51-30k/fe25519_neg.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/amd64-51-30k/batch.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/amd64-51-30k/ge25519_p1p1_to_p2.s
  src/cbits/nacl-20110221/crypto_sign/ed25519/amd64-51-30k/ge25519_pack.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/amd64-51-30k/hram.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/amd64-51-30k/ge25519_scalarmult_base.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/amd64-51-30k/sc25519_slide.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/amd64-51-30k/fe25519_setint.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/amd64-51-30k/fe25519_unpack.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/amd64-51-30k/ge25519_p1p1_to_pniels.s
  src/cbits/nacl-20110221/crypto_sign/ed25519/amd64-51-30k/open.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/amd64-51-30k/sc25519_barrett.s
  src/cbits/nacl-20110221/crypto_sign/ed25519/amd64-51-30k/ge25519_multi_scalarmult.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/amd64-51-30k/heap_rootreplaced_1limb.s
  src/cbits/nacl-20110221/crypto_sign/ed25519/amd64-51-30k/sc25519_from64bytes.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/amd64-51-30k/fe25519_freeze.s
  src/cbits/nacl-20110221/crypto_sign/ed25519/amd64-51-30k/ge25519_nielsadd2.s
  src/cbits/nacl-20110221/crypto_sign/ed25519/amd64-51-30k/sc25519_lt.s
  src/cbits/nacl-20110221/crypto_sign/ed25519/amd64-51-30k/fe25519_iseq.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/used
  src/cbits/nacl-20110221/crypto_sign/measure.c
  src/cbits/nacl-20110221/crypto_sign/try.c
  src/cbits/nacl-20110221/crypto_sign/wrapper-keypair.cpp
  src/cbits/nacl-20110221/crypto_sign/wrapper-sign-open.cpp
  src/cbits/nacl-20110221/crypto_sign/wrapper-sign.cpp
  src/cbits/nacl-20110221/crypto_stream/aes128ctr/checksum
  src/cbits/nacl-20110221/crypto_stream/aes128ctr/core2/afternm.s
  src/cbits/nacl-20110221/crypto_stream/aes128ctr/core2/api.h
  src/cbits/nacl-20110221/crypto_stream/aes128ctr/core2/beforenm.s
  src/cbits/nacl-20110221/crypto_stream/aes128ctr/core2/stream.c
  src/cbits/nacl-20110221/crypto_stream/aes128ctr/core2/xor.c
  src/cbits/nacl-20110221/crypto_stream/aes128ctr/core2/xor_afternm.s
  src/cbits/nacl-20110221/crypto_stream/aes128ctr/portable/afternm.c
  src/cbits/nacl-20110221/crypto_stream/aes128ctr/portable/api.h
  src/cbits/nacl-20110221/crypto_stream/aes128ctr/portable/beforenm.c
  src/cbits/nacl-20110221/crypto_stream/aes128ctr/portable/common.c
  src/cbits/nacl-20110221/crypto_stream/aes128ctr/portable/common.h
  src/cbits/nacl-20110221/crypto_stream/aes128ctr/portable/consts.c
  src/cbits/nacl-20110221/crypto_stream/aes128ctr/portable/consts.h
  src/cbits/nacl-20110221/crypto_stream/aes128ctr/portable/int128.c
  src/cbits/nacl-20110221/crypto_stream/aes128ctr/portable/int128.h
  src/cbits/nacl-20110221/crypto_stream/aes128ctr/portable/stream.c
  src/cbits/nacl-20110221/crypto_stream/aes128ctr/portable/types.h
  src/cbits/nacl-20110221/crypto_stream/aes128ctr/portable/xor_afternm.c
  src/cbits/nacl-20110221/crypto_stream/aes128ctr/used
  src/cbits/nacl-20110221/crypto_stream/measure.c
  src/cbits/nacl-20110221/crypto_stream/salsa20/amd64_xmm6/api.h
  src/cbits/nacl-20110221/crypto_stream/salsa20/amd64_xmm6/implementors
  src/cbits/nacl-20110221/crypto_stream/salsa20/amd64_xmm6/stream.s
  src/cbits/nacl-20110221/crypto_stream/salsa20/checksum
  src/cbits/nacl-20110221/crypto_stream/salsa20/ref/api.h
  src/cbits/nacl-20110221/crypto_stream/salsa20/ref/implementors
  src/cbits/nacl-20110221/crypto_stream/salsa20/ref/stream.c
  src/cbits/nacl-20110221/crypto_stream/salsa20/ref/xor.c
  src/cbits/nacl-20110221/crypto_stream/salsa20/used
  src/cbits/nacl-20110221/crypto_stream/salsa20/x86_xmm5/api.h
  src/cbits/nacl-20110221/crypto_stream/salsa20/x86_xmm5/implementors
  src/cbits/nacl-20110221/crypto_stream/salsa20/x86_xmm5/stream.s
  src/cbits/nacl-20110221/crypto_stream/salsa2012/amd64_xmm6/api.h
  src/cbits/nacl-20110221/crypto_stream/salsa2012/amd64_xmm6/implementors
  src/cbits/nacl-20110221/crypto_stream/salsa2012/amd64_xmm6/stream.s
  src/cbits/nacl-20110221/crypto_stream/salsa2012/checksum
  src/cbits/nacl-20110221/crypto_stream/salsa2012/ref/api.h
  src/cbits/nacl-20110221/crypto_stream/salsa2012/ref/implementors
  src/cbits/nacl-20110221/crypto_stream/salsa2012/ref/stream.c
  src/cbits/nacl-20110221/crypto_stream/salsa2012/ref/xor.c
  src/cbits/nacl-20110221/crypto_stream/salsa2012/used
  src/cbits/nacl-20110221/crypto_stream/salsa2012/x86_xmm5/api.h
  src/cbits/nacl-20110221/crypto_stream/salsa2012/x86_xmm5/implementors
  src/cbits/nacl-20110221/crypto_stream/salsa2012/x86_xmm5/stream.s
  src/cbits/nacl-20110221/crypto_stream/salsa208/amd64_xmm6/api.h
  src/cbits/nacl-20110221/crypto_stream/salsa208/amd64_xmm6/implementors
  src/cbits/nacl-20110221/crypto_stream/salsa208/amd64_xmm6/stream.s
  src/cbits/nacl-20110221/crypto_stream/salsa208/checksum
  src/cbits/nacl-20110221/crypto_stream/salsa208/ref/api.h
  src/cbits/nacl-20110221/crypto_stream/salsa208/ref/implementors
  src/cbits/nacl-20110221/crypto_stream/salsa208/ref/stream.c
  src/cbits/nacl-20110221/crypto_stream/salsa208/ref/xor.c
  src/cbits/nacl-20110221/crypto_stream/salsa208/used
  src/cbits/nacl-20110221/crypto_stream/salsa208/x86_xmm5/api.h
  src/cbits/nacl-20110221/crypto_stream/salsa208/x86_xmm5/implementors
  src/cbits/nacl-20110221/crypto_stream/salsa208/x86_xmm5/stream.s
  src/cbits/nacl-20110221/crypto_stream/try.c
  src/cbits/nacl-20110221/crypto_stream/wrapper-stream.cpp
  src/cbits/nacl-20110221/crypto_stream/wrapper-xor.cpp
  src/cbits/nacl-20110221/crypto_stream/xsalsa20/checksum
  src/cbits/nacl-20110221/crypto_stream/xsalsa20/ref/api.h
  src/cbits/nacl-20110221/crypto_stream/xsalsa20/ref/implementors
  src/cbits/nacl-20110221/crypto_stream/xsalsa20/ref/stream.c
  src/cbits/nacl-20110221/crypto_stream/xsalsa20/ref/xor.c
  src/cbits/nacl-20110221/crypto_stream/xsalsa20/selected
  src/cbits/nacl-20110221/crypto_stream/xsalsa20/used
  src/cbits/nacl-20110221/crypto_verify/16/checksum
  src/cbits/nacl-20110221/crypto_verify/16/ref/api.h
  src/cbits/nacl-20110221/crypto_verify/16/ref/verify.c
  src/cbits/nacl-20110221/crypto_verify/16/used
  src/cbits/nacl-20110221/crypto_verify/32/checksum
  src/cbits/nacl-20110221/crypto_verify/32/ref/api.h
  src/cbits/nacl-20110221/crypto_verify/32/ref/verify.c
  src/cbits/nacl-20110221/crypto_verify/32/used
  src/cbits/nacl-20110221/crypto_verify/measure.c
  src/cbits/nacl-20110221/crypto_verify/try.c
  src/cbits/nacl-20110221/crypto_verify/wrapper-empty.cpp
  src/cbits/nacl-20110221/curvecp/blocking.c
  src/cbits/nacl-20110221/curvecp/blocking.h
  src/cbits/nacl-20110221/curvecp/byte.h
  src/cbits/nacl-20110221/curvecp/byte_copy.c
  src/cbits/nacl-20110221/curvecp/byte_isequal.c
  src/cbits/nacl-20110221/curvecp/byte_zero.c
  src/cbits/nacl-20110221/curvecp/crypto_block.c
  src/cbits/nacl-20110221/curvecp/crypto_block.h
  src/cbits/nacl-20110221/curvecp/curvecpclient.c
  src/cbits/nacl-20110221/curvecp/curvecpmakekey.c
  src/cbits/nacl-20110221/curvecp/curvecpmessage.c
  src/cbits/nacl-20110221/curvecp/curvecpprintkey.c
  src/cbits/nacl-20110221/curvecp/curvecpserver.c
  src/cbits/nacl-20110221/curvecp/die.c
  src/cbits/nacl-20110221/curvecp/die.h
  src/cbits/nacl-20110221/curvecp/e.c
  src/cbits/nacl-20110221/curvecp/e.h
  src/cbits/nacl-20110221/curvecp/hexparse.c
  src/cbits/nacl-20110221/curvecp/hexparse.h
  src/cbits/nacl-20110221/curvecp/LIBS
  src/cbits/nacl-20110221/curvecp/load.c
  src/cbits/nacl-20110221/curvecp/load.h
  src/cbits/nacl-20110221/curvecp/nameparse.c
  src/cbits/nacl-20110221/curvecp/nameparse.h
  src/cbits/nacl-20110221/curvecp/nanoseconds.c
  src/cbits/nacl-20110221/curvecp/nanoseconds.h
  src/cbits/nacl-20110221/curvecp/open.h
  src/cbits/nacl-20110221/curvecp/open_cwd.c
  src/cbits/nacl-20110221/curvecp/open_lock.c
  src/cbits/nacl-20110221/curvecp/open_pipe.c
  src/cbits/nacl-20110221/curvecp/open_read.c
  src/cbits/nacl-20110221/curvecp/open_write.c
  src/cbits/nacl-20110221/curvecp/portparse.c
  src/cbits/nacl-20110221/curvecp/portparse.h
  src/cbits/nacl-20110221/curvecp/randommod.c
  src/cbits/nacl-20110221/curvecp/randommod.h
  src/cbits/nacl-20110221/curvecp/README
  src/cbits/nacl-20110221/curvecp/safenonce.c
  src/cbits/nacl-20110221/curvecp/safenonce.h
  src/cbits/nacl-20110221/curvecp/savesync.c
  src/cbits/nacl-20110221/curvecp/savesync.h
  src/cbits/nacl-20110221/curvecp/socket.h
  src/cbits/nacl-20110221/curvecp/socket_bind.c
  src/cbits/nacl-20110221/curvecp/socket_recv.c
  src/cbits/nacl-20110221/curvecp/socket_send.c
  src/cbits/nacl-20110221/curvecp/socket_udp.c
  src/cbits/nacl-20110221/curvecp/SOURCES
  src/cbits/nacl-20110221/curvecp/TARGETS
  src/cbits/nacl-20110221/curvecp/uint16_pack.c
  src/cbits/nacl-20110221/curvecp/uint16_pack.h
  src/cbits/nacl-20110221/curvecp/uint16_unpack.c
  src/cbits/nacl-20110221/curvecp/uint16_unpack.h
  src/cbits/nacl-20110221/curvecp/uint32_pack.c
  src/cbits/nacl-20110221/curvecp/uint32_pack.h
  src/cbits/nacl-20110221/curvecp/uint32_unpack.c
  src/cbits/nacl-20110221/curvecp/uint32_unpack.h
  src/cbits/nacl-20110221/curvecp/uint64_pack.c
  src/cbits/nacl-20110221/curvecp/uint64_pack.h
  src/cbits/nacl-20110221/curvecp/uint64_unpack.c
  src/cbits/nacl-20110221/curvecp/uint64_unpack.h
  src/cbits/nacl-20110221/curvecp/writeall.c
  src/cbits/nacl-20110221/curvecp/writeall.h
  src/cbits/nacl-20110221/do
  src/cbits/nacl-20110221/inttypes/crypto_int16.c
  src/cbits/nacl-20110221/inttypes/crypto_int32.c
  src/cbits/nacl-20110221/inttypes/crypto_int64.c
  src/cbits/nacl-20110221/inttypes/crypto_int8.c
  src/cbits/nacl-20110221/inttypes/crypto_uint16.c
  src/cbits/nacl-20110221/inttypes/crypto_uint32.c
  src/cbits/nacl-20110221/inttypes/crypto_uint64.c
  src/cbits/nacl-20110221/inttypes/crypto_uint8.c
  src/cbits/nacl-20110221/inttypes/do
  src/cbits/nacl-20110221/inttypes/signed.h
  src/cbits/nacl-20110221/inttypes/unsigned.h
  src/cbits/nacl-20110221/MACROS
  src/cbits/nacl-20110221/measure-anything.c
  src/cbits/nacl-20110221/okcompilers/abiname.c
  src/cbits/nacl-20110221/okcompilers/archivers
  src/cbits/nacl-20110221/okcompilers/c
  src/cbits/nacl-20110221/okcompilers/cpp
  src/cbits/nacl-20110221/okcompilers/do
  src/cbits/nacl-20110221/okcompilers/lib.c
  src/cbits/nacl-20110221/okcompilers/lib.cpp
  src/cbits/nacl-20110221/okcompilers/main.c
  src/cbits/nacl-20110221/okcompilers/main.cpp
  src/cbits/nacl-20110221/OPERATIONS
  src/cbits/nacl-20110221/PROTOTYPES.c
  src/cbits/nacl-20110221/PROTOTYPES.cpp
  src/cbits/nacl-20110221/randombytes/devurandom.c
  src/cbits/nacl-20110221/randombytes/devurandom.h
  src/cbits/nacl-20110221/randombytes/do
  src/cbits/nacl-20110221/randombytes/test.c
  src/cbits/nacl-20110221/tests/auth.c
  src/cbits/nacl-20110221/tests/auth.out
  src/cbits/nacl-20110221/tests/auth2.c
  src/cbits/nacl-20110221/tests/auth2.out
  src/cbits/nacl-20110221/tests/auth3.c
  src/cbits/nacl-20110221/tests/auth3.out
  src/cbits/nacl-20110221/tests/auth4.cpp
  src/cbits/nacl-20110221/tests/auth4.out
  src/cbits/nacl-20110221/tests/auth5.c
  src/cbits/nacl-20110221/tests/auth5.out
  src/cbits/nacl-20110221/tests/auth6.cpp
  src/cbits/nacl-20110221/tests/auth6.out
  src/cbits/nacl-20110221/tests/box.c
  src/cbits/nacl-20110221/tests/box.out
  src/cbits/nacl-20110221/tests/box2.c
  src/cbits/nacl-20110221/tests/box2.out
  src/cbits/nacl-20110221/tests/box3.cpp
  src/cbits/nacl-20110221/tests/box3.out
  src/cbits/nacl-20110221/tests/box4.cpp
  src/cbits/nacl-20110221/tests/box4.out
  src/cbits/nacl-20110221/tests/box5.cpp
  src/cbits/nacl-20110221/tests/box5.out
  src/cbits/nacl-20110221/tests/box6.cpp
  src/cbits/nacl-20110221/tests/box6.out
  src/cbits/nacl-20110221/tests/box7.c
  src/cbits/nacl-20110221/tests/box7.out
  src/cbits/nacl-20110221/tests/box8.c
  src/cbits/nacl-20110221/tests/box8.out
  src/cbits/nacl-20110221/tests/core1.c
  src/cbits/nacl-20110221/tests/core1.out
  src/cbits/nacl-20110221/tests/core2.c
  src/cbits/nacl-20110221/tests/core2.out
  src/cbits/nacl-20110221/tests/core3.c
  src/cbits/nacl-20110221/tests/core3.out
  src/cbits/nacl-20110221/tests/core4.c
  src/cbits/nacl-20110221/tests/core4.out
  src/cbits/nacl-20110221/tests/core5.c
  src/cbits/nacl-20110221/tests/core5.out
  src/cbits/nacl-20110221/tests/core6.c
  src/cbits/nacl-20110221/tests/core6.out
  src/cbits/nacl-20110221/tests/hash.c
  src/cbits/nacl-20110221/tests/hash.out
  src/cbits/nacl-20110221/tests/hash2.cpp
  src/cbits/nacl-20110221/tests/hash2.out
  src/cbits/nacl-20110221/tests/hash3.c
  src/cbits/nacl-20110221/tests/hash3.out
  src/cbits/nacl-20110221/tests/hash4.cpp
  src/cbits/nacl-20110221/tests/hash4.out
  src/cbits/nacl-20110221/tests/onetimeauth.c
  src/cbits/nacl-20110221/tests/onetimeauth.out
  src/cbits/nacl-20110221/tests/onetimeauth2.c
  src/cbits/nacl-20110221/tests/onetimeauth2.out
  src/cbits/nacl-20110221/tests/onetimeauth5.cpp
  src/cbits/nacl-20110221/tests/onetimeauth5.out
  src/cbits/nacl-20110221/tests/onetimeauth6.cpp
  src/cbits/nacl-20110221/tests/onetimeauth6.out
  src/cbits/nacl-20110221/tests/onetimeauth7.c
  src/cbits/nacl-20110221/tests/onetimeauth7.out
  src/cbits/nacl-20110221/tests/onetimeauth8.cpp
  src/cbits/nacl-20110221/tests/onetimeauth8.out
  src/cbits/nacl-20110221/tests/scalarmult.c
  src/cbits/nacl-20110221/tests/scalarmult.out
  src/cbits/nacl-20110221/tests/scalarmult2.c
  src/cbits/nacl-20110221/tests/scalarmult2.out
  src/cbits/nacl-20110221/tests/scalarmult3.cpp
  src/cbits/nacl-20110221/tests/scalarmult3.out
  src/cbits/nacl-20110221/tests/scalarmult4.cpp
  src/cbits/nacl-20110221/tests/scalarmult4.out
  src/cbits/nacl-20110221/tests/scalarmult5.c
  src/cbits/nacl-20110221/tests/scalarmult5.out
  src/cbits/nacl-20110221/tests/scalarmult6.c
  src/cbits/nacl-20110221/tests/scalarmult6.out
  src/cbits/nacl-20110221/tests/scalarmult7.cpp
  src/cbits/nacl-20110221/tests/scalarmult7.out
  src/cbits/nacl-20110221/tests/secretbox.c
  src/cbits/nacl-20110221/tests/secretbox.out
  src/cbits/nacl-20110221/tests/secretbox2.c
  src/cbits/nacl-20110221/tests/secretbox2.out
  src/cbits/nacl-20110221/tests/secretbox3.cpp
  src/cbits/nacl-20110221/tests/secretbox3.out
  src/cbits/nacl-20110221/tests/secretbox4.cpp
  src/cbits/nacl-20110221/tests/secretbox4.out
  src/cbits/nacl-20110221/tests/secretbox5.cpp
  src/cbits/nacl-20110221/tests/secretbox5.out
  src/cbits/nacl-20110221/tests/secretbox6.cpp
  src/cbits/nacl-20110221/tests/secretbox6.out
  src/cbits/nacl-20110221/tests/secretbox7.c
  src/cbits/nacl-20110221/tests/secretbox7.out
  src/cbits/nacl-20110221/tests/secretbox8.c
  src/cbits/nacl-20110221/tests/secretbox8.out
  src/cbits/nacl-20110221/tests/stream.c
  src/cbits/nacl-20110221/tests/stream.out
  src/cbits/nacl-20110221/tests/stream2.c
  src/cbits/nacl-20110221/tests/stream2.out
  src/cbits/nacl-20110221/tests/stream3.c
  src/cbits/nacl-20110221/tests/stream3.out
  src/cbits/nacl-20110221/tests/stream4.c
  src/cbits/nacl-20110221/tests/stream4.out
  src/cbits/nacl-20110221/tests/stream5.cpp
  src/cbits/nacl-20110221/tests/stream5.out
  src/cbits/nacl-20110221/tests/stream6.cpp
  src/cbits/nacl-20110221/tests/stream6.out
  src/cbits/nacl-20110221/tests/stream7.cpp
  src/cbits/nacl-20110221/tests/stream7.out
  src/cbits/nacl-20110221/tests/stream8.cpp
  src/cbits/nacl-20110221/tests/stream8.out
  src/cbits/nacl-20110221/try-anything.c
  src/cbits/nacl-20110221/version
  
extra-tmp-files:
  salt.buildinfo
  
source-repository head
  type: git
  location: https://github.com/thoughtpolice/salt.git

library
  exposed-modules:
    Crypto.NaCl.Auth
    Crypto.NaCl.Auth.Auth
    Crypto.NaCl.Auth.OneTimeAuth
    Crypto.NaCl.Encrypt.PublicKey
    Crypto.NaCl.Encrypt.SecretKey
    Crypto.NaCl.Encrypt.Stream
    Crypto.NaCl.Hash
    Crypto.NaCl.Key
    Crypto.NaCl.Nonce
    Crypto.NaCl.Random
    Crypto.NaCl.Sign

  build-depends:
    base       >= 4,
    bytestring >= 0.9,
    tagged     >= 0.2

  hs-source-dirs: src
  c-sources:        
    src/cbits/glue.c
    src/cbits/devurandom.c
  extra-libraries:  nacl stdc++

  cc-options:       -Wall
  ghc-options:      -Wall -O2 -funbox-strict-fields
                    -fwarn-tabs

  default-extensions: CPP
  default-language:   Haskell2010

test-suite properties
  hs-source-dirs: tests
  main-is:        Properties.hs
  type:           exitcode-stdio-1.0

  build-depends:
    base           >= 4,
    bytestring     >= 0.9,
    tagged         >= 0.2,
    QuickCheck     >= 2.4,
    HUnit          >= 1.2,
    test-framework >= 0.5,
    test-framework-quickcheck2 >= 0.2,
    test-framework-hunit >= 0.2,
    salt

  ghc-options:      -Wall -fno-cse -fno-warn-orphans
                    -threaded -rtsopts
  default-language: Haskell2010
